# synthpp

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.linux  README.md  main.cpp  player.cpp  player.h  twinkle_star.cpp  twinkle_star.h
core/: audio_engine.cpp  audio_engine.h  melody.h  score.h
melodies/: json_melody.cpp  json_melody.h  twinkle_star.h
midi_scribe_tool/: midi_fixer.py  midi_scribe.py  note_parser.py
player/: player.cpp  player.h
renderer/: renderer.cpp  renderer.h
src/: audio_engine.cpp  audio_engine.h  main.cpp  melody.cpp  melody.h  player.cpp  player.h  score.cpp  score.h  twinkle_star.cpp
src/core/: melody.h  note.h  score.cpp  score.h
src/melodies/: json_melody.cpp  json_melody.h  twinkle_star.h
src/renderer/: wav_renderer.cpp  wav_renderer.h
src/synth/: synth_engine.cpp  synth_engine.h  voice.cpp  voice.h
src/utils/: midi_utils.h
tools/midi_scribe/: midi_note_parser.py  midi_scribe.py
